--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,11 +2,12 @@
 .header-content {
     // color: $orange-color;
     // color: $purple-color;
-    color: black;
-    top: 350px;
+    color: darkgray;
+    top: 250px;
     position: absolute;
     left: $navbar-bleed;
-    
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+
     .ml11 .text-wrapper {
       position: relative;
       display: inline-block;
@@ -37,14 +38,12 @@
     
     h1 {
       font-family: 'Neon';
-      font-size: 8vw;
+      font-size: 5vw;
     }
     h2 {
       font-family: DIN;
       font-size: 4vw;
-      // color: black;
-      // color: $purple-color;
-      color: #8332fc;
+
     }
     .big-button {
       top: 20px;
