--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,9 +11,10 @@ $navbar-bleed: 30px;
   font-size: 28px;
   padding: 1px 20px;
   border-radius: 4px;
-  background: $purple-color;
+  background: none;
   position: relative;
   color: white;
+  border: 1px solid white;
   &:hover {
     background: $dark-purple-color;
     cursor: pointer;
@@ -68,7 +69,7 @@ $navbar-bleed: 30px;
       font-size: 17px;
       padding-bottom: 0px;
       margin: 0;
-      color: #6d757d;
+      color: white;
     }
 
     .big-button {
@@ -84,6 +85,10 @@ $navbar-bleed: 30px;
   height: auto;
   width: 100%;
   min-height: 100%;
+
+  .glcanvas {
+    height: 200%;
+  }
 }
 
 .clients {
