--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -241,4 +241,13 @@ body {
     width: 50%;
     max-width: 200px;
   }
+
+  height: 200px;
+  color: white;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+
 }
